# VulkanSceneGraph

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE.md  README.md  ROADMAP.md  WaylandBuildInstructions.md  azure-pipelines.yml  vsgMacros.cmake
applications/: CMakeLists.txt
applications/VulkanTutorial/: 22_descriptor_set.cpp  23_texture_image.cpp  CMakeLists.txt
applications/VulkanTutorial/shaders/: vert.spv
applications/osgexample/: osgexample.cpp
applications/vsgarrays/: CMakeLists.txt  vsgarrays.cpp
applications/vsgc_interface/: .vsgintrospection.cpp.kate-swp  CMakeLists.txt  vsgc_interface.c
applications/vsgcompute/: CMakeLists.txt  vsgcompute.cpp
applications/vsgdraw/: CMakeLists.txt  CommandLine.h  Draw.h  Instance.cpp  Swapchain.cpp  vsgdraw.cpp
applications/vsgdraw/shaders/: shader.frag  shader.vert  vert.spv
applications/vsgdraw/textures/: lz.rgb  reflect.rgb
applications/vsgdraw/vk/: Device.h  ImageView.h  Instance.h  PhysicalDevice.h  Surface.h  Swapchain.h
applications/vsgdraw/vulcan/: Instance.h
applications/vsgdraw/vulkan/: CmdDraw.h  Device.h  Instance.h  PhysicalDevice.h  Surface.h  Swapchain.h
applications/vsggroups/: CMakeLists.txt  vsggroups.cpp
applications/vsgintrospection/: CMakeLists.txt  vsgintrospection.cpp
applications/vsgmaths/: CMakeLists.txt  vsgmaths.cpp
applications/vsgmemory/: CMakeLists.txt  vsgmemory.cpp
applications/vsgnamespaces/: CMakeLists.txt  vsgnamespaces.cpp
applications/vsgnodes/: CMakeLists.txt  vsgnodes.cpp
applications/vsgobjects/: CMakeLists.txt  vsgobjects.cpp
applications/vsgpointer/: CMakeLists.txt  vsgpointer.cpp
applications/vsgpushconstants/: CMakeLists.txt  vsgpushconstants.cpp
applications/vsgpushconstants/shaders/: shader_PushConstants.vert  vert_PushConstants.spv
applications/vsgstate/: CMakeLists.txt  vsgstate.cpp
applications/vsgtypes/: CMakeLists.txt  vsgtypes.cpp
applications/vsgvalues/: CMakeLists.txt  vsgvalues.cpp
applications/vsgvisitor/: CMakeLists.txt  vsgvisitor.cpp
src/osg2vsg/: CMakeLists.txt  ImageUtils.cpp
src/osgexample/: CMakeLists.txt
src/vsg/: Auxiliary.cpp  CMakeLists.txt  Group.cpp  Node.cpp  Object.cpp  README.md  Visitor.cpp  vsgConfig.cmake  vsgConfig.cmake.in  vsg_glslangConfig.cmake
src/vsg/animation/: Animation.cpp  AnimationGroup.cpp  AnimationHandler.cpp  AnimationManager.cpp  AnimationPath.cpp  CameraAnimation.cpp  CameraAnimationHandler.cpp  CameraSampler.cpp  FindAnimations.cpp  Joint.cpp  JointSampler.cpp  MorphSampler.cpp  TransformSampler.cpp
src/vsg/app/: Camera.cpp  CommandGraph.cpp  CompileManager.cpp  CompileTraversal.cpp  EllipsoidModel.cpp  LoadBalancing.cpp  Presentation.cpp  ProjectionMatrix.cpp  RecordAndSubmitTask.cpp  RecordOperation.cpp  RecordTraversal.cpp  RenderGraph.cpp  SecondaryCommandGraph.cpp  Trackball.cpp  TransferTask.cpp  UpdateOperations.cpp  View.cpp  ViewMatrix.cpp  Viewer.cpp  Window.cpp  WindowAdapter.cpp  WindowResizeHandler.cpp  WindowTraits.cpp
src/vsg/commands/: BeginQuery.cpp  BindIndexBuffer.cpp  BindVertexBuffers.cpp  BlitImage.cpp  ClearAttachments.cpp  ClearImage.cpp  Command.cpp  Commands.cpp  CopyAndReleaseBuffer.cpp  CopyAndReleaseBufferDataCommand.cpp  CopyAndReleaseImage.cpp  CopyAndReleaseImageDataCommand.cpp  CopyImage.cpp  CopyImageToBuffer.cpp  CopyImageViewToWindow.cpp  CopyQueryPoolResults.cpp  Dispatch.cpp  Draw.cpp  DrawIndexed.cpp  DrawIndexedIndirect.cpp  DrawIndirect.cpp  EndQuery.cpp  Event.cpp  ExecuteCommands.cpp  NextSubPass.cpp  PipelineBarrier.cpp  PushConstants.cpp  README.md  ResetQueryPool.cpp  ResolveImage.cpp  SetDepthBias.cpp  SetLineWidth.cpp  SetPrimitiveTopology.cpp  SetScissor.cpp  SetViewport.cpp  WriteTimestamp.cpp
src/vsg/core/: Allocator.cpp  Array.cpp  ArrayInstantiations.cpp  Auxiliary.cpp  ConstVisitor.cpp  Data.cpp  External.cpp  IntrusiveAllocator.cpp  MemorySlots.cpp  MipmapDetails.cpp  MipmapLayout.cpp  Object.cpp  Objects.cpp  README.md  Result.cpp  Version.cpp  Version.h.in  Visitor.cpp
src/vsg/introspection/: README.md  c_interface.cpp
src/vsg/io/: ApplyVisitorReader.cpp  AsciiInput.cpp  AsciiOutput.cpp  BinaryInput.cpp  BinaryOutput.cpp  DatabasePager.cpp  FileSystem.cpp  Input.cpp  JSONParser.cpp  Logger.cpp  ObjectCache.cpp  ObjectFactory.cpp  Options.cpp  Output.cpp  Path.cpp  README.md  ReaderWriter.cpp  ReaderWriter_vsg.cpp  VSG.cpp  convert_utf.cpp  glsl.cpp  json.cpp  mem_stream.cpp  read.cpp  spirv.cpp  tile.cpp  txt.cpp  write.cpp
src/vsg/lighting/: AmbientLight.cpp  DirectionalLight.cpp  HardShadows.cpp  Light.cpp  PercentageCloserSoftShadows.cpp  PointLight.cpp  ShadowSettings.cpp  SoftShadows.cpp  SpotLight.cpp
src/vsg/maths/: README.md  common.cpp  maths_transform.cpp  transform.cpp
src/vsg/meshshaders/: DrawMeshTasks.cpp  DrawMeshTasksIndirect.cpp  DrawMeshTasksIndirectCount.cpp
src/vsg/nodes/: AbsoluteTransform.cpp  Bin.cpp  Commands.cpp  CoordinateFrame.cpp  CullGroup.cpp  CullNode.cpp  DepthSorted.cpp  Geometry.cpp  Group.cpp  InstanceDraw.cpp  InstanceDrawIndexed.cpp  InstanceNode.cpp  InstrumentationNode.cpp  IntersectionOptimizedVertexDraw.cpp  IntersectionProxy.cpp  LOD.cpp  Layer.cpp  Light.cpp  MaskGroup.cpp  MatrixTransform.cpp  Node.cpp  PagedLOD.cpp  QuadGroup.cpp  RegionOfInterest.cpp  StateGroup.cpp  Switch.cpp  TileDatabase.cpp  Transform.cpp  VertexDraw.cpp  VertexIndexDraw.cpp
src/vsg/platform/: README.md
src/vsg/raytracing/: AccelerationGeometry.cpp  AccelerationStructure.cpp  AccelerationStructureBuildTraversal.cpp  BottomLevelAccelerationStructure.cpp  BuildAccelerationStructureTraversal.cpp  DescriptorAccelerationStructure.cpp  README.md  RayTracingPipeline.cpp  RayTracingShaderBindings.cpp  RayTracingShaderGroup.cpp  RayTracingStage.cpp  TraceRays.cpp  (+1 more)
src/vsgobjects/: Auxiliary.cpp  Auxiliary.h  Auxiliary.hpp  CMakeLists.txt  Group.cpp  Group.h  Group.hpp  Node.cpp  Node.h  Node.hpp  Object.cpp  Object.h  Object.hpp  ObjectConnections.cpp  ObjectConnections.hpp  observer_ptr.h  observer_ptr.hpp  ref_ptr.hpp  vsgobjects.cpp
(+773 files in other folders)
