add_subdirectory(osgexample)

add_subdirectory(vsgobjects)
add_subdirectory(vsgnamespaces)
add_subdirectory(vsggroups)
add_subdirectory(vsgvisitor)
add_subdirectory(vsgvalues)
add_subdirectory(vsgnodes)
add_subdirectory(vsgmaths)
add_subdirectory(vsgarrays)
add_subdirectory(vsgdraw)
add_subdirectory(vsgpointer)
add_subdirectory(vsgtypes)
add_subdirectory(vsgcompute)
add_subdirectory(vsgmemory)
add_subdirectory(vsgpushconstants)
add_subdirectory(vsgstate)
