SET(APPLICATION_NAME vsgdraw)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${GLFW_INCLUDE_DIR}
    ${Vulkan_INCLUDE_DIR}
    ${OSG_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(HEADERS
)

SET(SOURCES
    vsgdraw.cpp
)

ADD_EXECUTABLE(${APPLICATION_NAME} ${HEADERS} ${SOURCES})

LINK_DIRECTORIES(${OSG_LIB_DIR})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} vsg osg2vsg ${Vulkan_LIBRARY} ${GLFW_LIBRARY} ${OSG_LIBRARIES} ${OSGUTIL_LIBRARIES} ${OSGDB_LIBRARIES})
