SET(APPLICATION_NAME vsggroups)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    (${OPENTHREADS_INCLUDE_DIR}
    ${OSG_INCLUDE_DIR})
)


SET(SOURCES
    vsggroups.cpp
)


ADD_EXECUTABLE(${APPLICATION_NAME} ${HEADERS} ${SOURCES})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} vsg ${OSG_LIBRARIES})
