INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${OSG_INCLUDE_DIR}
    ${Vulkan_INCLUDE_DIR}
)

SET(HEADERS
    ImageUtils.h
)

SET(SOURCES
    ImageUtils.cpp
)

ADD_LIBRARY(osg2vsg SHARED ${HEADER_FILES} ${SOURCES})

TARGET_LINK_LIBRARIES(osg2vsg ${Vulkan_LIBRARY} vsg ${OSG_LIBRARIES} ${OSGUTIL_LIBRARIES} ${OSGDB_LIBRARIES})
